fix: align AIP integrations preview mobile layout

--- a/src/components/sections/aip/integrations-page.module.css
+++ b/src/components/sections/aip/integrations-page.module.css
@@ -146,7 +146,7 @@
 
 @media (max-width: 500px) {
   .heroSection {
-    padding-top: 64px;
+    padding-top: 120px;
     padding-bottom: 80px;
   }
 
@@ -176,6 +176,16 @@
 
   .productItem {
     padding: 24px 18px;
+  }
+
+  .icon {
+    width: 60px;
+    height: 60px;
+  }
+
+  .iconImage {
+    width: 60px;
+    height: 60px;
   }
 }
 
